--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,18 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>fitgym-pro-dashboard</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>FitGym Pro - Modern Gym Management System</title>
+    <meta name="description" content="FitGym Pro - A comprehensive gym management system for modern fitness centers" />
+    <meta name="author" content="FitGym Pro" />
 
-    <meta property="og:title" content="fitgym-pro-dashboard" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="FitGym Pro - Modern Gym Management System" />
+    <meta property="og:description" content="A comprehensive gym management system for modern fitness centers" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
