--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,10 @@
     <meta name="description" content="FitGym Pro - A comprehensive gym management system for modern fitness centers" />
     <meta name="author" content="FitGym Pro" />
 
+    <!-- Explicitly disable favicon -->
+    <link rel="icon" href="data:,">
+    <link rel="shortcut icon" href="data:,">
+
     <meta property="og:title" content="FitGym Pro - Modern Gym Management System" />
     <meta property="og:description" content="A comprehensive gym management system for modern fitness centers" />
     <meta property="og:type" content="website" />
